
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 JUL 13b
  * in README
    - updated the overview of CFDWARP
    

2022 JUL 13a
  * in tools/makepng.sh
    - Modified the tecplot macro script so that it is compatible with tecplot 2022 (the previous
      used to be compatible with tecplot 2009)
    - added the --osmesa flag to the tec360 call (needed with tecplot 2022 when doing batch 
      processing)
  * in tools/makemissing.sh, tools/makemovie.sh, tools/makepng.sh, tools/makepost.sh, 
    tools/renamebatch.sh, tools/replace.sh, tools/search.sh, tools/tecplotpostfiles.sh
    - changed $0 by ${0##*/} when outputting the name of the script in the help screen
    
    
2022 JUL 12a
  * in model/chem/_C2H4_Air_Plasma_30s/chem.c
    - implemented TEMIN, TEMAX, TEFROMEOVERN
    - in _kfit4(), fixed a bug: kf shouldn't be divided by calA
  * in .makefile-header-default
    - took away -DNDEBUG from the default C and linker flags: this fixes odd bugs we were getting
      recently with gcc and mpicc when using compiler optimization -O1 or higher
    

2022 JUL 10a
  * in bin/*.wrp
    - upgraded the control files so they can be run without change with the latest version
      of CFDWARP
  

2022 JUl 09a
  * in model/transport/_Gupta-Yos/transport.c
    - fixed a bug related to yesterday's change: 30000 K should be OMEGATMAXCLIP in _piOmega11()
    

2022 JUL 08b
  * in model/transport/_Gupta-Yos/transport.c
    - in _piOmega11() and _piOmega22(), removed the clipping
      of the temperature that prevented it to be above 30000K. Now, the polynomials are used
      for temperatures as low as OMEGATMAXCLIP (which is set to 1e9K).
  

2022 JUL 08a
  * in model/transport/_Dixon-Lewis/transport.c