@@ -1,0 +1,27 @@
+#!/usr/local/bin/soap
+mi=4.33e-27;
+N=3.28e21;
+Ni=0.1142*N;
+Nn=N-2*Ni;
+T=8885;
+Te=7200;
+
+muii=14.3/sqrt(mi)*T^1.5/Ni;
+muin=2.2e10/Nn/sqrt(mi*T);
+
+muei=9.5e16/Ni*Te^1.5/5;
+muen=3.74e19/Nn*exp(33.5/sqrt(ln(Te)));
+
+
+mui=1.0/(1.0/muii+1/muin);
+
+mue=1/(1/muei+1/muen);
+
+printf("mue=%E\n",mue);
+printf("mui=%E\n",mui);
+
+printf("muen=%E\n",muen);
+printf("muin=%E\n",muin);
+
+printf("muei=%E\n",muei);
+printf("muii=%E\n",muii);
